Overflow Fixed

--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,7 @@
+html {
+	max-width: 100%;
+	overflow-x: hidden;
+}
 .Invis {
 	display: none;
 }
@@ -104,10 +108,32 @@
 .Navbar-Link-Active:hover {
 	color: #d27d53;
 }
+.fade-enter {
+	transform: scale(0.75);
+	opacity: 0;
+	transition: opacity 300ms ease-in, transform 300ms ease-in;
+}
+.fade-enter-active {
+	transform: scale(1);
+	opacity: 1;
+	transition: opacity 300ms ease-in, transform 300ms ease-in;
+}
+.fade-exit {
+	transform: scale(1);
+	opacity: 1;
+	transition: opacity 300ms ease-in, transform 300ms ease-in;
+}
+.fade-exit-active {
+	transform: scale(0.75);
+	opacity: 0;
+	transition: opacity 300ms ease-in, transform 300ms ease-in;
+}
 #root {
 	margin: 0 auto;
 	padding: 2rem;
 	max-width: 1280px;
+	max-width: 100%;
+	overflow-x: hidden;
 	text-align: center;
 }
 
